<resources>
    <string name="app_name">SoftwareProject</string>
    <string name="tablayout_list">لیستی</string>
    <string name="tablayout_weekly">هفتگی</string>
    <string name="credit">اعتبار:\u0020\u0020\u0020\u0020\u0020 %1$d ریال</string>
    <string name="Open">باز کردن</string>
    <string name="Close">بستن</string>
    <string name="bank_transactions_report">گزارش تراکنش های بانکی</string>
    <string name="purchase_reserve_report">گزارش خرید ژتون</string>
    <string name="credits_report">گزارش اعتبار ها</string>
    <string name="exit">خروج</string>
    <string name="not_verified">نام کاربری یا رمز عبور شما اشتباه است!</string>
    <string name="card_buying">خرید ژتون</string>
    <string name="breakfast">صبحانه</string>
    <string name="lunch">ناهار</string>
    <string name="dinner">شام</string>
    <string name="unplanned">برنامه ریزی نشده</string>
    <string name="previous_week">هفته قبل</string>
    <string name="next_week">هفته بعد</string>
    <string name="choose_restaurant">انتخاب رستوران:</string>
    <string name="choose_food">انتخاب خوراک:</string>

    <string-array name="restaurants">
        <item>رستوران</item>
        <item>غذا خوری ارم</item>
        <item>غذاخوري دانشكده مهندسي نفت و گاز</item>
        <item>غذا خوری دانشکده هنر معماری</item>
        <item>سالن غذا خوری خوابگاه دست غیب(بیرون بر)</item>
        <item>غذاخوري دانشكده علوم</item>
        <item>غذاخوري مرکزی</item>
        <item> غذاخوري دانشكده کشاورزی</item>
        <item>غذاخوري دانشكده دامپزشکی</item>
        <item>غذاخوري دانشكده  خوابگاه دامپزشکی</item>
        <item>رستوران کوهپایه</item>
        <item>رستوران لاهیتا</item>
        <item>رستوران ریحانه</item>
        <item>رستوران بیرون بر آسمان</item>
    </string-array>
    <string-array name="meals">
        <item>وعده</item>
        <item>صبحانه</item>
        <item>ناهار</item>
        <item>شام</item>
    </string-array>


</resources>
