<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="6dp"
    android:layout_marginTop="8dp"
    android:layout_marginRight="6dp"
    android:layout_marginBottom="8dp"
    android:layoutDirection="rtl"
    app:cardBackgroundColor="@android:color/transparent"
    app:cardCornerRadius="15dp"
    app:cardElevation="8dp">
    <!--ToDo: layoutDirection attribute warning: Check whether the rtl layoutDirection works on API 16 or not!-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:background="@color/colorAccent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="6dp"
            android:paddingBottom="6dp">

            <TextView

                android:id="@+id/day_name"
                style="@style/ItemWeeklyFragmentTextViewDayAndDate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="دوشنبه"
                tools:ignore="HardcodedText" />

            <TextView
                android:id="@+id/date"
                style="@style/ItemWeeklyFragmentTextViewDayAndDate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="1398/01/02"
                tools:ignore="HardcodedText" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/colorSecondaryDark" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/breakfast_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/bg_weekly_right_bottom_rounded_dinner"
                android:clickable="true"
                android:orientation="vertical"
                android:paddingTop="10dp"
                android:paddingBottom="10dp">

                <TextView
                    android:layout_marginRight="10dp"
                    style="@style/ItemWeeklyFragmentTextViewMeal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/breakfast" />

                <TextView
                    android:id="@+id/breakfast_text"
                    style="@style/ItemWeeklyFragmentTextViewFood"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/card_buying" />
            </LinearLayout>

            <View
                android:layout_width="2dp"
                android:layout_height="match_parent"
                android:background="@color/colorSecondaryDark" />

            <LinearLayout
                android:id="@+id/lunch_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/bg_weekly_lunch"
                android:clickable="true"
                android:orientation="vertical"
                android:paddingTop="10dp"
                android:paddingBottom="10dp">

                <TextView
                    android:layout_marginRight="10dp"
                    style="@style/ItemWeeklyFragmentTextViewMeal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lunch" />

                <TextView
                    android:id="@+id/lunch_text"
                    style="@style/ItemWeeklyFragmentTextViewFood"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="چلو کباب با دلستر و ژله و ماهی و زیتون و همه چی " />
            </LinearLayout>

            <View
                android:layout_width="2dp"
                android:layout_height="match_parent"
                android:background="@color/colorSecondaryDark" />

            <LinearLayout
                android:id="@+id/dinner_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/bg_weekly_left_bottom_rounded_breakfast"
                android:clickable="true"
                android:orientation="vertical"
                android:paddingTop="10dp"
                android:paddingBottom="10dp">

                <TextView
                    android:layout_marginRight="10dp"
                    style="@style/ItemWeeklyFragmentTextViewMeal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dinner" />

                <TextView
                    android:id="@+id/dinner_text"
                    style="@style/ItemWeeklyFragmentTextViewFood"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=" چلو کباب"
                    tools:ignore="HardcodedText" />
            </LinearLayout>

        </LinearLayout>


    </LinearLayout>

</android.support.v7.widget.CardView>